Fix overflow behavior in transaction preview

--- a/backend/sass/common.blocks/_labeled-input.scss
+++ b/backend/sass/common.blocks/_labeled-input.scss
@@ -50,6 +50,11 @@
   margin-bottom: 10px;
 }
 
+.labeled-preview {
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+}
+
 .input_type_textarea.labeled-input__input {
     min-height: 115px;
 }
